@@ -137,14 +137,20 @@ isc_stdio_flush(FILE *f) {
 
 isc_result_t
 isc_stdio_sync(FILE *f) {
+	struct stat buf;
 	int r;
 
-	r = fsync(fileno(f));
+	if (fstat(fileno(f), &buf) != 0)
+		return (isc__errno2result(errno));
+ 
 	/*
-	 * fsync is not supported on sockets and pipes which
-	 * result in EINVAL / ENOTSUP.
+	 * Only call fsync() on regular files.
 	 */
-	if (r == 0 || errno == EINVAL || errno == ENOTSUP)
+	if ((buf.st_mode & S_IFMT) != S_IFREG)
+		return (ISC_R_SUCCESS);
+
+	r = fsync(fileno(f));
+	if (r == 0)
 		return (ISC_R_SUCCESS);
 	else
 		return (isc__errno2result(errno));
