@@ -25,6 +25,9 @@
 #include <isc/stdio.h>
 #include <isc/util.h>
 
+#include <sys/stat.h>
+#include <sys/types.h>
+
 #include "errno2result.h"
 
 isc_result_t
@@ -133,7 +136,17 @@ isc_stdio_flush(FILE *f) {
 
 isc_result_t
 isc_stdio_sync(FILE *f) {
+	struct _stat buf;
 	int r;
+
+	if (_fstat(_fileno(f), &buf) != 0)
+		return (isc__errno2result(errno));
+
+	/*
+	 * Only call _commit() on regular files.
+	 */
+	if ((buf.st_mode & S_IFMT) != S_IFREG)
+		return (ISC_R_SUCCESS);
 
 	r = _commit(_fileno(f));
 	if (r == 0)
